[project]
name = "edgeditection"
version = "0.1.0"
description = ""
authors = [
    {name = "sontyubo"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "gradio (>=5.22.0,<6.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]

[tool.poetry]
packages = [
    { include = "utils", from = "src"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
